--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to photography page</h1>
     <p>Hello everyone this my photography</p>
+    <h2>Second Header</h2>
 </body>
 </html>
